syntax = "proto3";

package cdb;

option go_package = "github.com/laixhe/gonet/proto/gen/config/cdb;cdb";

// 数据库配置
message DB {
  // 连接地址
  string dsn            = 1; // @gotags: mapstructure:"dsn"
  // 设置空闲连接池中连接的最大数量
  int32 max_idle_count  = 2; // @gotags: mapstructure:"max_idle_count"
  // 设置打开数据库连接的最大数量
  int32 max_open_count  = 3; // @gotags: mapstructure:"max_open_count"
  // 设置了连接可复用的最大时间(要比数据库设置连接超时时间少)(单位秒)
  int64 max_life_time   = 4; // @gotags: mapstructure:"max_life_time"
}